# trinidad-margni-portfolio

./: .editorconfig  .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  netlify.toml  tailwind.css
.githooks/: commit-msg  pre-commit  pre-push  shared.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: audit.yml  build.yml  test.yml
netlify/functions/: contact.mjs
public/data/certs/: certifications.json
public/data/certs/categories/: 1-project-management-and-csm.json  2-artificial-intelligence.json  3-web-development.json  4-digital-marketing.json  5-product-management-and-e-commerce.json  6-communications.json
scripts/: setup.sh
src/: lib.rs  main.rs  site_links.rs
src/components/: about.rs  cert_card.rs  cert_modal.rs  certifications.rs  companies.rs  contact.rs  counter_btn.rs  footer.rs  header.rs  hero.rs  mod.rs  social_nav_icons.rs
src/data/: certifications.rs  mod.rs
src/pages/: certifications.rs  home.rs  mod.rs  not_found.rs
tests/: app_test.rs
