[package]
name = "trinidad-margni-portfolio"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
must_use_candidate = "allow"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", default-features = false, features = ["std", "wasm-bindgen"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "Event",
    "Headers",
    "History",
    "HtmlAnchorElement",
    "HtmlButtonElement",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "Location",
    "NodeList",
    "Request",
    "RequestInit",
    "Response",
    "Storage",
    "SubmitEvent",
    "Window",
] }

[dev-dependencies]
wasm-bindgen = "0.2.118"
wasm-bindgen-test = "0.3.50"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
